increasing QA in NCWMS